Added basic structure of html page and css

--- a/index.html
+++ b/index.html
@@ -17,31 +17,33 @@
 
         <div class="container">
 
-            <header class="header">
-                <div class="header-left">
-                    <img src="./img/Logo.png" alt="Logo">
-                    <h1>Campo Minato</h1>
-                </div>
+            <div class="square">
+                <h1>Time to the next lesson:</h1>
 
-                <div class="header-right">
-                    <button class="btn btn-primary" id="btn-play">Play</button>
-                    <select id="difficulty-selector">
-                        <option value="difficulty-1">Difficoltà 1</option>
-                        <option value="difficulty-2">Difficoltà 2</option>
-                        <option value="difficulty-3">Difficoltà 3</option>
-                    </select>                      
-                </div>
-            </header>
+                <div class="timer">
 
-            <div class="mined-field">
-                <div id="grid">
+                    <div class="timer-item">
+                        <span class="days">00</span>
+                        <div class="timer-label">Days</div>
+                    </div>
+
+                    <div class="timer-item">
+                        <span class="hours">00</span>
+                        <div class="timer-label">Hours</div>
+                    </div>
+
+                    <div class="timer-item">
+                        <span class="minutes">00</span>
+                        <div class="timer-label">Minutes</div>
+                    </div>
+
+                    <div class="timer-item">
+                        <span class="seconds">00</span>
+                        <div class="timer-label">Seconds</div>
+                    </div>
 
                 </div>
             </div>
-
-            <footer class="footer">
-                <p>Made with <i class="fa-solid fa-heart"></i> by <a href="#">Boolean</a></p>
-            </footer>
 
         </div>
 
