Set up basic structure for html and css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
 
             <div class="square">
-                <h1>Time to the next lesson:</h1>
+                <p>Time to the next lesson:</p>
 
                 <div class="timer">
 
