--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                     </div>
 
                 </div>
+
+                <div class="hidden timerOver">
+                    <p class="text-center">The class has started!</p>
+                    <button class="btn btn-primary btn-lg btn-block" onclick="location.reload()">Play again</button>
+                </div>
+
             </div>
 
         </div>
