Changed getElementsByClass to ByID

--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
             <div class="square">
                 <p>Time to the next lesson:</p>
 
-                <div class="timer">
+                <div id="timer">
 
                     <div class="timer-item">
-                        <span class="days">00</span>
+                        <span id="days">00</span>
                         <div class="timer-label">Days</div>
                     </div>
 
                     <div class="timer-item">
-                        <span class="hours">00</span>
+                        <span id="hours">00</span>
                         <div class="timer-label">Hours</div>
                     </div>
 
                     <div class="timer-item">
-                        <span class="minutes">00</span>
+                        <span id="minutes">00</span>
                         <div class="timer-label">Minutes</div>
                     </div>
 
                     <div class="timer-item">
-                        <span class="seconds">00</span>
+                        <span id="seconds">00</span>
                         <div class="timer-label">Seconds</div>
                     </div>
 
                 </div>
 
-                <div class="hidden timerOver">
+                <div class="hidden" id="timerOver">
                     <p class="text-center">The class has started!</p>
                     <button class="btn btn-primary btn-lg btn-block" onclick="location.reload()">Play again</button>
                 </div>
