Going back to previous code

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="square">
                 <p>Time to the next lesson:</p>
 
-                <div id="timer">
+                <div class="timer">
 
                     <div class="timer-item">
                         <span id="days">00</span>
@@ -44,7 +44,7 @@
 
                 </div>
 
-                <div class="hidden" id="timerOver">
+                <div class="hidden timerOver">
                     <p class="text-center">The class has started!</p>
                     <button class="btn btn-primary btn-lg btn-block" onclick="location.reload()">Play again</button>
                 </div>
